--- a/oct13_practical/practice.ipynb
+++ b/oct13_practical/practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "906bcfd6",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "d0199ae1",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "d774d2fb",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "05e2cbe9",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "266366c7",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "2f02c475",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "910ca7a2",
    "metadata": {},
    "outputs": [
@@ -516,7 +516,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "82b27fdf",
    "metadata": {},
    "outputs": [],
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "9393ede4",
    "metadata": {},
    "outputs": [
@@ -564,6 +564,58 @@
    ],
    "source": [
     "viz_linear()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "abef9a8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Set Mean Squared Error: 11.189103289351676\n",
+      "Test Set Mean Squared Error: 8.970991242413614\n",
+      "Training Set R² Score: 0.5736021199591975\n",
+      "Test Set R² Score: 0.6714477229302764\n",
+      "------------------------------------------\n",
+      "Model may be underfitting, consider increasing model complexity.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import necessary libraries for performance metrics\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "\n",
+    "# Predicting for the training set\n",
+    "y_train_pred = lin_reg.predict(X_train)##xtrain \n",
+    "\n",
+    "# Predicting for the test set\n",
+    "y_test_pred = lin_reg.predict(X_test)##\n",
+    "\n",
+    "mse_train = mean_squared_error(y_train, y_train_pred)\n",
+    "mse_test = mean_squared_error(y_test, y_test_pred)\n",
+    "r2_train = r2_score(y_train, y_train_pred)\n",
+    "r2_test = r2_score(y_test, y_test_pred)\n",
+    "\n",
+    "# Print the metrics\n",
+    "print(\"Training Set Mean Squared Error:\", mse_train)\n",
+    "print(\"Test Set Mean Squared Error:\", mse_test)\n",
+    "print(\"Training Set R² Score:\", r2_train)\n",
+    "print(\"Test Set R² Score:\", r2_test)\n",
+    "print(\"------------------------------------------\")\n",
+    "# Check for overfitting or underfitting\n",
+    "if mse_train < mse_test or r2_train > r2_test:\n",
+    "    if abs(r2_train - r2_test) > 0.1:\n",
+    "        print(\"Model may be overfitting to the training data.\")\n",
+    "    else:\n",
+    "        print(\"Model performs reasonably well but check for slight overfitting.\")\n",
+    "elif mse_train > mse_test and r2_train < r2_test:\n",
+    "    print(\"Model may be underfitting, consider increasing model complexity.\")\n",
+    "else:\n",
+    "    print(\"Model has a balanced fit on both training and testing datasets.\")"
    ]
   }
  ],
