--- a/Practice/oct27_featureEngineering/practicenotebook_featureengineering (1).ipynb
+++ b/Practice/oct27_featureEngineering/practicenotebook_featureengineering (1).ipynb
@@ -714,16 +714,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c4bc111e-cd88-484e-b1de-51257b6c2f6e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DataFrame with square root transformed 'price':\n",
+      "             price  SquareRoot_price\n",
+      "0     3.130000e+05        559.464029\n",
+      "1     2.384000e+06       1544.020725\n",
+      "2     3.420000e+05        584.807661\n",
+      "3     4.200000e+05        648.074070\n",
+      "4     5.500000e+05        741.619849\n",
+      "...            ...               ...\n",
+      "4595  3.081667e+05        555.127613\n",
+      "4596  5.343333e+05        730.981076\n",
+      "4597  4.169042e+05        645.681165\n",
+      "4598  2.034000e+05        450.998891\n",
+      "4599  2.206000e+05        469.680743\n",
+      "\n",
+      "[4600 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Square root transforming the 'price' variable\n",
+    "df['SquareRoot_price'] = np.sqrt(df['price'])\n",
+    "\n",
+    "# Displaying the DataFrame with the new feature\n",
+    "print(\"DataFrame with square root transformed 'price':\")\n",
+    "print(df[['price', 'SquareRoot_price']])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ca0a886f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DataFrame with box-cox transformed price:\n",
+      "      sqft_living  BoxCox_Price\n",
+      "0            1340      8.270694\n",
+      "1            3650      9.609815\n",
+      "2            1930      8.752432\n",
+      "3            2000      8.799829\n",
+      "4            1940      8.759304\n",
+      "...           ...           ...\n",
+      "4595         1510      8.427672\n",
+      "4596         1460      8.383344\n",
+      "4597         3010      9.348240\n",
+      "4598         2090      8.858475\n",
+      "4599         1490      8.410113\n",
+      "\n",
+      "[4600 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import boxcox\n",
+    "\n",
+    "# Applying Box-Cox transformation to 'sales' variable\n",
+    "df['BoxCox_Price'], _ = boxcox(df['sqft_living'])\n",
+    "\n",
+    "# Displaying the DataFrame with the Box-Cox transformed 'sales' variable\n",
+    "print(\"DataFrame with box-cox transformed price:\")\n",
+    "print(df[['sqft_living', 'BoxCox_Price']])\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 [3.10]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -737,7 +805,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
