--- a/Practice/Oct-27/practise_day1.ipynb
+++ b/Practice/Oct-27/practise_day1.ipynb
@@ -158,6 +158,381 @@
     "#df_excel = pd.read_excel('Iris.csv')\n",
     "#print(df_excel)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3b8a130",
+   "metadata": {},
+   "source": [
+    "Accessing DataFrames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "31447cb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Single column:\n",
+      "0     5\n",
+      "1    15\n",
+      "2     8\n",
+      "Name: Column_name, dtype: int64\n",
+      "\n",
+      "Multiple columns:\n",
+      "   Column1  Column2\n",
+      "0       10      100\n",
+      "1       20      200\n",
+      "2       30      300\n",
+      "\n",
+      "Specific row:\n",
+      "Column_name         5\n",
+      "Column1            10\n",
+      "Column2           100\n",
+      "Another_column     25\n",
+      "Name: 0, dtype: int64\n",
+      "\n",
+      "Filtered rows:\n",
+      "   Column_name  Column1  Column2  Another_column\n",
+      "1           15       20      200              35\n",
+      "\n",
+      "Single cell by label:\n",
+      "5\n",
+      "\n",
+      "Single cell by position:\n",
+      "10\n",
+      "\n",
+      "Data using .loc:\n",
+      "5\n",
+      "\n",
+      "Conditional access:\n",
+      "1    35\n",
+      "Name: Another_column, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Creating a sample DataFrame\n",
+    "data = {'Column_name': [5, 15, 8],\n",
+    "        'Column1': [10, 20, 30],\n",
+    "        'Column2': [100, 200, 300],\n",
+    "        'Another_column': [25, 35, 45]}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Accessing a single column\n",
+    "column_data = df['Column_name']\n",
+    "print(\"Single column:\")\n",
+    "print(column_data)\n",
+    "\n",
+    "# Accessing multiple columns\n",
+    "selected_columns = df[['Column1', 'Column2']]\n",
+    "print(\"\\nMultiple columns:\")\n",
+    "print(selected_columns)\n",
+    "\n",
+    "# Accessing a specific row by index\n",
+    "row_data = df.iloc[0]\n",
+    "print(\"\\nSpecific row:\")\n",
+    "print(row_data)\n",
+    "\n",
+    "# Accessing rows based on a condition\n",
+    "filtered_rows = df[df['Column_name'] > 10]\n",
+    "print(\"\\nFiltered rows:\")\n",
+    "print(filtered_rows)\n",
+    "\n",
+    "# Accessing a single cell by label\n",
+    "value = df.at[0, 'Column_name']\n",
+    "print(\"\\nSingle cell by label:\")\n",
+    "print(value)\n",
+    "\n",
+    "# Accessing a single cell by position\n",
+    "value = df.iat[0, 1]  # Row 0, Column 1\n",
+    "print(\"\\nSingle cell by position:\")\n",
+    "print(value)\n",
+    "\n",
+    "# Accessing data using .loc\n",
+    "selected_data = df.loc[0, 'Column_name']\n",
+    "print(\"\\nData using .loc:\")\n",
+    "print(selected_data)\n",
+    "\n",
+    "# Conditional access\n",
+    "selected_data = df[df['Column_name'] > 10]['Another_column']\n",
+    "print(\"\\nConditional access:\")\n",
+    "print(selected_data)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2152dc8",
+   "metadata": {},
+   "source": [
+    "Basic functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "be974bec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First 2 rows:\n",
+      "   Column_name  Column1  Column2  Another_column\n",
+      "0            5       10      100              25\n",
+      "1           15       20      200              35\n",
+      "\n",
+      "Last row:\n",
+      "   Column_name  Column1  Column2  Another_column\n",
+      "2            8       30      300              45\n",
+      "\n",
+      "DataFrame summary:\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3 entries, 0 to 2\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column          Non-Null Count  Dtype\n",
+      "---  ------          --------------  -----\n",
+      " 0   Column_name     3 non-null      int64\n",
+      " 1   Column1         3 non-null      int64\n",
+      " 2   Column2         3 non-null      int64\n",
+      " 3   Another_column  3 non-null      int64\n",
+      "dtypes: int64(4)\n",
+      "memory usage: 228.0 bytes\n",
+      "\n",
+      "DataFrame dimensions:\n",
+      "(3, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Create a sample DataFrame\n",
+    "data = {'Column_name': [5, 15, 8],\n",
+    "        'Column1': [10, 20, 30],\n",
+    "        'Column2': [100, 200, 300],\n",
+    "        'Another_column': [25, 35, 45]}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Display the first 2 rows\n",
+    "print(\"First 2 rows:\")\n",
+    "print(df.head(2))\n",
+    "\n",
+    "# Display the last row\n",
+    "print(\"\\nLast row:\")\n",
+    "print(df.tail(1))\n",
+    "\n",
+    "# Provide a comprehensive summary of the DataFrame\n",
+    "print(\"\\nDataFrame summary:\")\n",
+    "df.info()\n",
+    "\n",
+    "# Return a tuple representing the dimensions of the DataFrame (Rows, columns)\n",
+    "print(\"\\nDataFrame dimensions:\")\n",
+    "print(df.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "003a3fec",
+   "metadata": {},
+   "source": [
+    "Statistical Operations on DF."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f635f08",
+   "metadata": {},
+   "source": [
+    "1.Descriptive Statistics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ef7d34fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Descriptive statistics for numeric columns:\n",
+      "       Numeric_column1  Numeric_column2  Numeric_column3\n",
+      "count         3.000000              3.0              3.0\n",
+      "mean          9.333333             20.0            200.0\n",
+      "std           5.131601             10.0            100.0\n",
+      "min           5.000000             10.0            100.0\n",
+      "25%           6.500000             15.0            150.0\n",
+      "50%           8.000000             20.0            200.0\n",
+      "75%          11.500000             25.0            250.0\n",
+      "max          15.000000             30.0            300.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Create a sample DataFrame with numeric columns\n",
+    "data = {'Numeric_column1': [5, 15, 8],\n",
+    "        'Numeric_column2': [10, 20, 30],\n",
+    "        'Numeric_column3': [100, 200, 300]}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Display descriptive statistics for numeric columns\n",
+    "print(\"Descriptive statistics for numeric columns:\")\n",
+    "print(df.describe())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8e3189b",
+   "metadata": {},
+   "source": [
+    "2. Mean, Median, Standard Deviation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2cb0b391",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean:\n",
+      " Numeric_column1      9.333333\n",
+      "Numeric_column2     20.000000\n",
+      "Numeric_column3    200.000000\n",
+      "dtype: float64\n",
+      "\n",
+      "Median:\n",
+      " Numeric_column1      8.0\n",
+      "Numeric_column2     20.0\n",
+      "Numeric_column3    200.0\n",
+      "dtype: float64\n",
+      "\n",
+      "Standard deviation:\n",
+      " Numeric_column1      5.131601\n",
+      "Numeric_column2     10.000000\n",
+      "Numeric_column3    100.000000\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Create a sample DataFrame with numeric columns\n",
+    "data = {'Numeric_column1': [5, 15, 8],\n",
+    "        'Numeric_column2': [10, 20, 30],\n",
+    "        'Numeric_column3': [100, 200, 300]}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Calculate mean, median, and standard deviation\n",
+    "mean_value = df.mean()\n",
+    "median_value = df.median()\n",
+    "std_deviation = df.std()\n",
+    "\n",
+    "print(\"Mean:\\n\", mean_value)\n",
+    "print(\"\\nMedian:\\n\", median_value)\n",
+    "print(\"\\nStandard deviation:\\n\", std_deviation)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e60d8870",
+   "metadata": {},
+   "source": [
+    "3.Correlation Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e7a65256",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correlation matrix:\n",
+      "                  Numeric_column1  Numeric_column2  Numeric_column3\n",
+      "Numeric_column1         1.000000         0.292306         0.292306\n",
+      "Numeric_column2         0.292306         1.000000         1.000000\n",
+      "Numeric_column3         0.292306         1.000000         1.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Create a sample DataFrame with numeric columns\n",
+    "data = {'Numeric_column1': [5, 15, 8],\n",
+    "        'Numeric_column2': [10, 20, 30],\n",
+    "        'Numeric_column3': [100, 200, 300]}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Compute correlation matrix\n",
+    "correlation_matrix = df.corr()\n",
+    "\n",
+    "print(\"Correlation matrix:\\n\", correlation_matrix)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50a78d85",
+   "metadata": {},
+   "source": [
+    "4.Value Count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "345e3f09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value counts:\n",
+      " Category\n",
+      "A    4\n",
+      "B    3\n",
+      "C    3\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Create a sample DataFrame with a category column\n",
+    "data = {'Category': ['A', 'B', 'A', 'C', 'B', 'A', 'C', 'A', 'B', 'C']}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Count occurrences of unique values in the category column\n",
+    "value_counts = df['Category'].value_counts()\n",
+    "\n",
+    "print(\"Value counts:\\n\", value_counts)\n"
+   ]
   }
  ],
  "metadata": {
